--- a/src/server/ormconfig.sample.json
+++ b/src/server/ormconfig.sample.json
@@ -5,7 +5,8 @@
   "username": "demouser",
   "password": "qwerty",
   "database": "demo",
-  "synchronize": true,
+  "synchronize": false,
+  "migrationsRun": true,
   "logging": false,
   "entities": [
      "src/entity/**/*.ts"
