--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@types/enzyme": "^3.1.17",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/history": "^4.7.2",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.21",
@@ -17,6 +19,8 @@
     "@types/yup": "^0.26.8",
     "axios": "^0.18.0",
     "connected-react-router": "^6.2.2",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "formik": "^1.4.3",
     "history": "^4.7.2",
     "react": "^16.8.1",
@@ -25,10 +29,14 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.8.1",
     "redux": "^4.0.1",
-    "redux-actions": "^2.6.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "tslint": "^5.12.1",
+    "tslint-react": "^3.6.0",
+    "typesafe-actions": "^3.0.0",
     "typescript": "3.3.1",
     "yup": "^0.26.10"
   },
@@ -46,5 +54,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/redux-mock-store": "^1.0.0",
+    "redux-mock-store": "^1.5.3"
+  }
 }
