--- a/src/client/package.json
+++ b/src/client/package.json
@@ -34,8 +34,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "tslint": "^5.12.1",
-    "tslint-react": "^3.6.0",
     "typesafe-actions": "^3.0.0",
     "typescript": "3.3.1",
     "yup": "^0.26.10"
@@ -44,7 +42,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +56,8 @@
   ],
   "devDependencies": {
     "@types/redux-mock-store": "^1.0.0",
-    "redux-mock-store": "^1.5.3"
+    "redux-mock-store": "^1.5.3",
+    "tslint": "^5.12.1",
+    "tslint-react": "^3.6.0"
   }
 }
