Fix server tests

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -119,13 +119,13 @@ blocks:
           - node --version
           - npm --version
       jobs:
-        - name: Client Tests
+        - name: Build Client
           commands:
             - cd src/client
             - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
             - npm run build
             - cache restore client-dist-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-dist-$SEMAPHORE_GIT_BRANCH,client-dist-master
-        - name: Server Tests
+        - name: Build Server
           commands:
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
