Fix ci migrations up

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -102,8 +102,8 @@ blocks:
           commands:
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
-            - cp sample.env .env
-            - cp ormconfig.sample.json ormconfig.json
+            - cp ci.env .env
+            - cp ormconfig.ci.json ormconfig.json
             - npm run migrate:up
             - npm run test:e2e
 
