--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -102,6 +102,7 @@ blocks:
           commands:
             - cd src/client
             - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
+            - npx cypress install
             - npm run test:e2e
         - name: Server Tests
           commands:
