--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -97,7 +97,7 @@ blocks:
           - node --version
           - npm --version
           - sem-service start postgres
-          - sudo apt-get install libgtk2.0-0
+          - sudo apt-get install -y libgtk2.0-0
       jobs:
         # TODO cypress require additional package to be installed on ci server
         - name: Client Tests
