--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "client",
+  "name": "@semaphoreci/semaphore-demo-js-react-client",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
