--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "@semaphoreci/semaphore-demo-js-react-server",
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
