Add client deploy to gh pages

--- a/.sample.env
+++ b/.sample.env
@@ -1,3 +1,4 @@
-POSTGRES_DB=demo
-POSTGRES_USER=demouser
-POSTGRES_PASSWORD=qwerty
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
+POSTGRES_PORT=5432
