--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - database_data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - $POSTGRES_PORT:$POSTGRES_PORT
 
   adminer:
     image: adminer
