--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@semaphoreci/semaphore-demo-js-react-server",
+  "name": "@semaphoreci/semaphore-demo-javascript-server",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -29,6 +29,7 @@
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.3",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/joi": "^14.3.2",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "jest": "^23.6.0",
