--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -168,10 +168,10 @@ blocks:
 # For more on such options, see:
 # https://docs.semaphoreci.com/article/50-pipeline-yaml#promotions
 promotions:
-  # - name: Dockerize server
-  #   pipeline_file: server-docker-build.yml
-  #   auto_promote_on:
-  #     - result: passed
+  - name: Dockerize server
+    pipeline_file: server-docker-build.yml
+    auto_promote_on:
+      - result: passed
   - name: Deploy client
     pipeline_file: client-deploy-build.yml
     auto_promote_on:
