--- a/.semaphore/server-docker-build.yml
+++ b/.semaphore/server-docker-build.yml
@@ -15,32 +15,42 @@ blocks:
       # For info on creating secrets, see:
       # https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
       secrets:
-        - name: markoa-dockerhub
-        - name:
+        - name: gcr-secret
+        - name: server-ormconfig-production
+        - name: server-production-env
+      prologue:
+        commands:
+          # Authenticate using the file injected from the secret
+          - gcloud auth activate-service-account --key-file=.secrets.gcp.json
+          # Don't forget -q to silence confirmation prompts
+          - gcloud auth configure-docker -q
+          - gcloud config set project $GCP_PROJECT_ID
+          - gcloud config set compute/zone $GCP_PROJECT_DEFAULT_ZONE
+          - checkout
       jobs:
       - name: Docker build
         commands:
-          # Authenticate with Docker Hub
-          # using environment variables in markoa-dockerhub secret:
-          - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-          - checkout
           - cd src/server
+
+          - cp ormconfig.production.json ormconfig.json
 
           # Use docker layer caching and reuse unchanged layers to build a new
           # container image faster.
           # To do that, we first need to pull a previous version of container:
-          - docker pull semaphoredemos/semaphore-demo-javascript-server:latest || true
+          - docker pull "gcr.io/$GCP_PROJECT_ID/semaphore-demo-javascript-server:latest" || true
 
           # Build a new image based on pulled image, if present.
           # Use $SEMAPHORE_WORKFLOW_ID environment variable to produce a
           # unique image tag.
           # For a list of available environment variables on Semaphore, see:
           # https://docs.semaphoreci.com/article/12-environment-variables
-          - docker build --cache-from semaphoredemos/semaphore-demo-javascript-server:latest -t semaphoredemos/semaphore-demo-javascript-server:$SEMAPHORE_WORKFLOW_ID .
+
+          # Replace with your GCP Project ID
+          - docker build --cache-from semaphoredemos/semaphore-demo-javascript-server:latest -t "gcr.io/$GCP_PROJECT_ID/semaphore-demo-javascript-server:$SEMAPHORE_WORKFLOW_ID" .
           - docker images
 
-          # Push a new image to Docker Hub container registry:
-          - docker push semaphoredemos/semaphore-demo-javascript-server:$SEMAPHORE_WORKFLOW_ID
+          # Push a new image to container registry:
+          - docker push "gcr.io/$GCP_PROJECT_ID/semaphore-demo-javascript-server:$SEMAPHORE_WORKFLOW_ID"
 
 # The deployment pipeline is defined to run on manual approval from the UI.
 # Semaphore will the time and the name of the person who promotes each
