Add more secret samples, fix usage of secrets

--- a/.semaphore/server-docker-build.yml
+++ b/.semaphore/server-docker-build.yml
@@ -32,7 +32,8 @@ blocks:
         commands:
           - cd src/server
 
-          - cp ormconfig.production.json ormconfig.json
+          - cp /home/semaphore/ormconfig.production.json ormconfig.json
+          - cp /home/semaphore/server-production.env production.env
 
           # Use docker layer caching and reuse unchanged layers to build a new
           # container image faster.
