--- a/.semaphore/client-deploy-build.yml
+++ b/.semaphore/client-deploy-build.yml
@@ -30,7 +30,8 @@ blocks:
           value: production
         - name: CI
           value: 'true'
-
+      secrets:
+        - name: client-production-env
       # This block runs two jobs in parallel and they both share common
       # setup steps. We can group them in a prologue.
       # See https://docs.semaphoreci.com/article/50-pipeline-yaml#prologue
@@ -49,6 +50,8 @@ blocks:
         - name: client npm install and cache
           commands:
             - cd src/client
+
+            - cp /home/semaphore/client-production.env .env
 
             # Restore dependencies from cache.
             # For more info on caching, see https://docs.semaphoreci.com/article/68-caching-dependencies
