Fix passing env var to server on k8s

--- a/src/server/deployment.yml
+++ b/src/server/deployment.yml
@@ -15,13 +15,16 @@ spec:
       containers:
         - name: semaphore-demo-javascript-server
           image: gcr.io/$GCP_PROJECT_ID/semaphore-demo-javascript-server:$SEMAPHORE_WORKFLOW_ID
+          env:
+            - name: NODE_ENV
+              value: "production"
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: semaphore-demo-javascript-client-lb
+  name: semaphore-demo-javascript-server-lb
 spec:
   selector:
     app: semaphore-demo-javascript-server
