--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,19 +1,3 @@
-# FROM node:10.12.0
-
-# COPY package*.json ./
-
-# RUN npm install
-
-# COPY . .
-
-# # ENV NODE_ENV=production
-
-# RUN npm run build:prod
-
-# EXPOSE 3001
-
-# CMD [ "npm", "start" "--ignore-scripts"]
-
 FROM node:carbon-alpine as dist
 WORKDIR /tmp/
 COPY package*.json tsconfig*.json *.env ormconfig*.json ./
@@ -29,6 +13,7 @@ RUN npm install --production
 FROM node:carbon-alpine
 WORKDIR /usr/local/nub-api
 COPY --from=node_modules /tmp/node_modules ./node_modules
-COPY --from=dist /tmp/dist *.env ormconfig*.json ./
+COPY --from=dist /tmp/dist ./dist
+COPY --from=dist /tmp/*.env /tmp/ormconfig*.json ./
 EXPOSE 3001
 CMD ["node", "dist/main.js"]
