--- a/.semaphore/secrets/client-production-env-secret.sample.yml
+++ b/.semaphore/secrets/client-production-env-secret.sample.yml
@@ -4,5 +4,5 @@ metadata:
   name: client-production-env-secret
 data:
   files:
-    - path: /home/semaphore/client-production.env
+    - path: client-production.env
       content: PASTE_BASE64_ENCODED_CONTENT_HERE
