--- a/.semaphore/secrets/gc-k8s-secret.sample.yml
+++ b/.semaphore/secrets/gc-k8s-secret.sample.yml
@@ -4,5 +4,5 @@ metadata:
   name: gc-k8s-secret
 data:
   files:
-    - path: /home/semaphore/.kube/gc-k8s.yaml
+    - path: .kube/gc-k8s.yaml
       content: PASTE_BASE64_ENCODED_CONTENT_HERE
