--- a/.semaphore/secrets/gh-pages-secret.sample.yml
+++ b/.semaphore/secrets/gh-pages-secret.sample.yml
@@ -8,3 +8,6 @@ data:
       value: "super secret github username"
     - name: GH_EMAIL
       value: "super secret github email"
+  files:
+    - path: .ssh/id_rsa_semaphoreci_ghpages_deploy
+      content: PASTE_BASE64_ENCODED_CONTENT_HERE
