--- a/.semaphore/secrets/server-ormconfig-production-secret.sample.yml
+++ b/.semaphore/secrets/server-ormconfig-production-secret.sample.yml
@@ -4,5 +4,5 @@ metadata:
   name: server-ormconfig-production
 data:
   files:
-  - path: /home/semaphore/ormconfig.production.json
+  - path: ormconfig.production.json
     content: PASTE_BASE64_ENCODED_CONTENT_HERE
