--- a/.semaphore/secrets/server-production-env-secret.sample.yml
+++ b/.semaphore/secrets/server-production-env-secret.sample.yml
@@ -4,5 +4,5 @@ metadata:
   name: server-production-env
 data:
   files:
-  - path: /home/semaphore/server-production.env
+  - path: server-production.env
     content: PASTE_BASE64_ENCODED_CONTENT_HERE
