--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /tmp/
 COPY package*.json tsconfig*.json *.env ormconfig*.json ./
 COPY src/ src/
 RUN npm install
-RUN npm run build:prod
+RUN npm run build
 
 FROM node:carbon-alpine as node_modules
 WORKDIR /tmp/
@@ -16,4 +16,4 @@ COPY --from=node_modules /tmp/node_modules ./node_modules
 COPY --from=dist /tmp/dist ./dist
 COPY --from=dist /tmp/*.env /tmp/ormconfig*.json ./
 EXPOSE 3001
-CMD ["node", "dist/main.js"]
+CMD ["npm", "start", "--ignore-scripts"]
