--- a/.semaphore/client-deploy.yml
+++ b/.semaphore/client-deploy.yml
@@ -39,6 +39,6 @@ blocks:
             - git config --global user.name '$GH_USERNAME'
             - git config --global user.email '$GH_EMAIL'
 
-            - npm run deploy --ignore-scripts
+            - npm run deploy
 
             - git config --global url."https://github.com/".insteadOf "git@github.com:"
