--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -121,6 +121,10 @@ blocks:
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
             - npm test
+      epilogue:
+        always:
+          commands:
+            - test-results publish junit.xml
 
   - name: E2e Tests
     task:
