--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,16 +1,16 @@
-FROM node:carbon-alpine as dist
+FROM node:16.16.0-bullseye as dist
 WORKDIR /tmp/
 COPY package*.json tsconfig*.json *.env ormconfig*.json ./
 COPY src/ src/
 RUN npm install
 RUN npm run build
 
-FROM node:carbon-alpine as node_modules
+FROM node:16.16.0-bullseye as node_modules
 WORKDIR /tmp/
 COPY package.json package-lock.json ./
 RUN npm install --production
 
-FROM node:carbon-alpine
+FROM node:16.16.0-bullseye
 WORKDIR /usr/local/nub-api
 COPY --from=node_modules /tmp/node_modules ./node_modules
 COPY --from=dist /tmp/dist ./dist
