--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -21,7 +21,7 @@ agent:
 # commands to execute.
 # See https://docs.semaphoreci.com/article/62-concepts
 blocks:
-  - name: Install dependencies
+  - name: 📦 Install dependencies
     task:
       # Set environment variables that your project requires.
       # See https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
@@ -69,7 +69,7 @@ blocks:
             - npm install
             - cache store server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
 
-  - name: Lint
+  - name: 🔍 Lint
     task:
       env_vars:
         - name: NODE_ENV
@@ -88,7 +88,6 @@ blocks:
             - cd src/client
             # At this point we can assume 100% cache hit rate of node modules:
             - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
-            - npm install
 
             # Run task as defined in package.json:
             - npm run lint
@@ -96,10 +95,9 @@ blocks:
           commands:
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
-            - npm install
             - npm run lint
 
-  - name: Tests
+  - name: 🧪 Unit Tests
     task:
       env_vars:
         - name: NODE_ENV
@@ -113,26 +111,24 @@ blocks:
           - node --version
           - npm --version
       jobs:
-        - name: Client Tests
+        - name: Client Unit Tests
           commands:
             - export NAME="Client tests"
             - cd src/client
             - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
-            - npm install
             - npm test
-        - name: Server Tests
+        - name: Server Unit Tests
           commands:
             - export NAME="Server tests"
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
-            - npm install
             - npm test
       epilogue:
         always:
           commands:
             - "[[ -f junit.xml ]] && test-results publish --name \"🧪 $NAME\" junit.xml"
 
-  - name: E2e Tests
+  - name: 🔄 E2E Tests
     task:
       env_vars:
         - name: NODE_ENV
@@ -153,20 +149,18 @@ blocks:
           # system package:
           - sudo apt-get install -y libgtk2.0-0
       jobs:
-        - name: Client Tests
+        - name: Client E2E Tests
           commands:
             - export NAME="Client tests"
             - cd src/client
             - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
-            - npm install
             - npx cypress install
             - npm run test:e2e
-        - name: Server Tests
+        - name: Server E2E Tests
           commands:
             - export NAME="Server tests"
             - cd src/server
             - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
-            - npm install
             - cp ormconfig.ci.json ormconfig.json
             - npm run migrate:up
             - npm run test:e2e
@@ -181,3 +175,19 @@ after_pipeline:
       - name: Publish Results
         commands:
           - test-results gen-pipeline-report
+
+# If all tests pass, we move on to build a Docker image.
+# This is a job for a separate pipeline which we link with a promotion.
+#
+# What happens outside semaphore.yml will not appear in GitHub pull
+# request status report.
+#
+# In this example we run docker build automatically on every branch.
+# You may want to limit it by branch name, or trigger it manually.
+# For more on such options, see:
+# https://docs.semaphoreci.com/article/50-pipeline-yaml#promotions
+promotions:
+  - name: Dockerize server
+    pipeline_file: server-docker-build.yml
+  - name: Deploy client
+    pipeline_file: client-deploy-build.yml
